detach rekognition from s3upload
